# bayestme

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  Makefile  README.md  Singularity  bayestme.conda.yml  demo.ipynb  main.nf  nextflow.config  pipeline.sh  pyproject.toml  requirements.txt  setup.py  tox.ini  version.config
.github/workflows/: bump_version.yaml  containers.yml  nextflow.yml  python-black.yml  python-unittest.yml  tests.yml
docs/: api.rst  command_line_interface.rst  conf.py  data_format.rst  demo_notebooks.rst  example_workflow.rst  fine_mapping_workflow.rst  index.rst  install.rst  nextflow.rst  overview.rst  pipeline.rst  reference_scrna.rst  requirements.txt  tutorial.rst
docs/source/: conf.py  index.rst  install.rst  tutorial.rst
nextflow/: bayestme.nf  bleeding_correction.nf  deconvolution.nf  deconvolution_sweep.nf  filter_genes.nf  load_input.nf  main.nf  nextflow.config  spatial_expression.nf
nextflow/config/: base.config
nextflow/modules/bayestme/bayestme_bleeding_correction/: main.nf  meta.yml
nextflow/modules/bayestme/bayestme_deconvolution/: main.nf  meta.yml
nextflow/modules/bayestme/bayestme_filter_genes/: main.nf  meta.yml
nextflow/modules/bayestme/bayestme_load_spaceranger/: main.nf  meta.yml
nextflow/modules/bayestme/bayestme_phenotype_selection/: main.nf  meta.yml
nextflow/modules/bayestme/bayestme_read_phenotype_selection_results/: main.nf  meta.yml
nextflow/modules/bayestme/bayestme_spatial_expression/: main.nf  meta.yml
nextflow/modules/bayestme/bayestme_spatial_transcriptional_programs/: main.nf
nextflow/modules/bayestme_bleeding_correction/: main.nf  meta.yml
nextflow/modules/bayestme_deconvolution/: main.nf  meta.yml
nextflow/modules/bayestme_filter_genes/: main.nf  meta.yml
nextflow/modules/bayestme_load_spaceranger/: main.nf
nextflow/modules/bayestme_spatial_expression/: main.nf  meta.yml
nextflow/modules/celltypist/: main.nf  notebook_celltypist.qmd
nextflow/subworkflows/bayestme/bayestme_basic_visium_analysis/: main.nf  main.yml
nextflow/subworkflows/bayestme/bayestme_cross_validation/: main.nf  main.yml
nextflow/tests/config/: nextflow.config  pytest_modules.yaml  test_data.config
nextflow/tests/data/: bleed_correction_results.h5  dataset_deconvolved.h5ad  dataset_deconvolved_marker_genes.h5ad  dataset_filtered.h5ad  dataset_filtered_corrected.h5ad  deconvolution_samples.h5  demo.h5ad  sde_samples.h5
nextflow/tests/data/phenotype_selection/: fold_0.h5ad  fold_1.h5ad  fold_2.h5ad  fold_3.h5ad  fold_4.h5ad  fold_5.h5ad  fold_6.h5ad  fold_7.h5ad  fold_8.h5ad  fold_9.h5ad
notebooks/: Benchmarks.ipynb  bleeding_correction.ipynb  deconvolution.ipynb  demo.ipynb  exp_prior_atlas.ipynb  hexagon_plotting.ipynb  simple_semisyn.ipynb  spatial_benchmark_metric.py  spatial_differential_expression.ipynb
notebooks/existing_methods/: DestVI.ipynb  cell2location.ipynb
scripts/: test_nextflow_pipeline.sh
seurat/: calculate_phi_k.R
seurat_fine_mapping/: Dockerfile  calculate_phi_k.R  cluster_relative_expression.R  entrypoint.sh
src/bayestme/: HMM_fast.py  bayestme.py  bayestme_data.py  bayestme_data_test.py  bleeding_correction.py  bleeding_correction_test.py  common.py  common_test.py  communities.py  cv_likelihoods.py  cv_likelihoods_test.py  data.py  data_test.py  deconvolution.py  deconvolution_test.py  expression_truth.py  expression_truth_test.py  fast_multivariate_normal.py  fast_multivariate_normal_test.py  gene_filtering.py  gene_filtering_test.py  gfbt_multinomial.py  grid_search_cfg.py  grid_search_cfg_test.py  hmm_fast.py  hmm_fast_test.py  imc.py  logging.py  maldi.py  marker_genes.py  marker_genes_test.py  model_bkg.py  phenotype_selection.py  phenotype_selection_test.py  plot_deconvolution.py  plot_deconvolution_test.py  plotting.py  plotting_test.py  semi_synthetic_spatial.py  semi_synthetic_spatial_test.py  (+8 more)
src/bayestme/cli/: bleeding_correction.py  bleeding_correction_test.py  common.py  deconvolve.py  deconvolve_test.py  filter_genes.py  filter_genes_test.py  load_spaceranger.py  phenotype_selection.py  phenotype_selection_test.py  plot_bleeding_correction.py  plot_bleeding_correction_test.py  plot_deconvolution.py  plot_deconvolution_test.py  plot_spatial_expression.py  plot_spatial_expression_test.py  prepare_kfold.py  process_phenotype_selection_results.py  read_phenotype_selection_results.py  select_marker_genes.py  select_marker_genes_test.py  spatial_expression.py  spatial_expression_test.py  spatial_transcriptional_programs.py  spatial_transcriptional_programs_test.py
src/bayestme/mcmc/: deconvolution.py  deconvolution_test.py  model_bkg.py
src/bayestme/plot/: common.py  common_test.py  deconvolution.py  deconvolution_test.py
src/bayestme/svi/: deconvolution.py  deconvolution_test.py  spatial_expression.py  spatial_expression_test.py
workflow/: bayestme.cwl  deconvolve.cwl  example.yaml  exec_config.json  filter_bleeding_correction.cwl  lung_sample_1.sh  manual_run_20220617.sh  prepare_image.cwl  prepare_kfold.cwl  run.sh  run_kfold.cwl  spatial_expression.cwl
(+29 files in other folders)
