[project]
name = "bayestme"
version = "1.0.0"
description = "A reference-free Bayesian method that discovers spatial transcriptional programs in the tissue microenvironment"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
keywords = ["spatial", "expression", "rna"]
authors = [
    {name = "Haoran Zhang", email = "hz6453@utexas.edu" },
    {name = "Jeff Quinn", email = "quinnj2@mskcc.org" },
    {name = "Wesley Tansey", email = "TanseyW@mskcc.org" }
]

maintainers = [
    {name = "Jeff Quinn", email = "quinnj2@mskcc.org" },
    {name = "Haoran Zhang", email = "hz6453@utexas.edu" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
        "numpy>=1.23.5,<2",
        "seaborn>=0.11.2,<1",
        "scipy>=1.7,<2",
        "scikit-learn>=1,<2",
        "polyagamma>=1.3.4,<2",
        "pyro-ppl>=1,<2",
        "matplotlib>=3.4,<4",
        "autograd-minimize>=0.2.2,<0.3",
        "torch>=1.11.0,<3",
        "statsmodels>=0.13.2,<1",
        "anndata>=0.8.0,<1",
        "h5py>=3.7.0,<4",
        "tqdm>=4.64.0,<5",
        "shapely>=1.8.0,<2.1",
        "geopandas>=0.14.1,<1",
        "scanpy>=1.10.1,<2"
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["pytest", "tox"]

[project.urls]
"Homepage" = "https://github.com/tansey-lab/bayestme"
"Documentation" = "https://bayestme.readthedocs.io/en/latest/"
"Source" = "https://github.com/tansey-lab/bayestme"

[project.scripts]
filter_genes="bayestme.cli.filter_genes:main"
bleeding_correction="bayestme.cli.bleeding_correction:main"
deconvolve="bayestme.cli.deconvolve:main"
spatial_transcriptional_programs="bayestme.cli.spatial_transcriptional_programs:main"
load_spaceranger="bayestme.cli.load_spaceranger:main"
plot_bleeding_correction="bayestme.cli.plot_bleeding_correction:main"
plot_deconvolution="bayestme.cli.plot_deconvolution:main"
phenotype_selection="bayestme.cli.phenotype_selection:main"
select_marker_genes="bayestme.cli.select_marker_genes:main"
process_phenotype_selection_results="bayestme.cli.process_phenotype_selection_results:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
